overlays/dev/apiVersion: networking.istio.io/frontend-resilience-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: dev
spec:
  hosts:
  - "*"
  gateways:
  - boutique-gateway
  http:
  - match:
    - uri:
        prefix: /
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream,5xx
    timeout: 5s
    route:
    - destination:
        host: frontend
        port:
          number: 80
